fixed on mobile

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -2771,3 +2771,11 @@
 .nested {
     display: none;
 }
+
+.recent-history {
+    .product-card-new {
+        max-width: inherit;
+        margin: auto;
+        margin-left: auto !important;
+    }
+}
